=== ongoing ===

== 1.4 ===

- prepared app for Django 1.8
- moved from factory_boy to mixer

== 1.3.2 ===

- brought coverage back to 100%
- improved slug generator

=== 1.3.1 ===

- Refreshed templates and js files

=== 1.3 ===

- prepared for Django 1.6

=== 1.2. ===

- using latest factory boy version


=== 1.1 ===

- Fixed setting name

=== 1.0 ===

- BACKWARDS INCOMPATIBLE CHANGE: Removed django-cms dependencies. Please read
  https://github.com/bitmazk/cmsplugin-frequently/ on how to migrate to this
  version

=== 0.6.2 ===

- Added get_absolute_url to Entry model

=== 0.6.1 ===

- Increased max_length of question field, turned it into a TextField

=== 0.6 ===

- New setting: FREQUENTLY_REQUIRE_EMAIL
- Posting a message when the question has been submitted successfully

=== 0.5 ===

* New dependency: django-libs==1.17
* New setting: FREQUENTLY_ALLOW_ANONYMOUS

=== 0.4 ===

* Added new Entry instance to the email context so that we can point to the
  admin URL of the new entry.

=== 0.3 ===

* added fixed position to category model and improved admins

=== 0.2.2 ===

* Re-arranged submission form
* Save submitter's email to the database
* Changed static files, so they can be used anywhere

=== 0.2.1 ===

* Added *.js files to MANIFEST.in

=== 0.2 ===

* Added cms plugin to render a set of categories
* Created template tag to render a category
* Added a better feedback admin
* Added more statistics

=== 0.1 ===

Initial commit