@@ -2,7 +2,7 @@
 {% load url from future %}
 <div data-answer-id="{{ entry.pk }}">
     <p>{% trans "Rating" %}: <span data-id="rating-id{{ entry.pk }}">{{ entry.rating }}</span></p>
-    <p>{{ entry.answer }}</p>
+    <p>{{ entry.answer|safe }}</p>
     {% if not entry.pk in rated_entries or feedback_entry == entry.pk %}
         {% include "frequently/partials/feedback.html" with object=entry %}
     {% else %}
