@@ -1,5 +1,7 @@
 === ongoing ===
 
+- added ckeditor to answer field
+
 == 1.4 ===
 
 - prepared app for Django 1.8
